# cargo-depflame

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: release.yml  rust.yml
analysis-reports/: AI_PROJECTS_ANALYSIS.md  ANALYSIS_FINDINGS.md  burn.html  burn.json  candle.html  candle.json  codex.html  codex.json  eza.html  eza.json  jj.html  jj.json  mistral.html  mistral.json  polars.html  polars.json  qdrant.html  qdrant.json  rig.html  rig.json  rkyv.html  rkyv.json  rmcp.html  rmcp.json  tabby.html  tabby.json  turso.html  turso.json  uv.html  uv.json  wild.html  wild.json
examples/: gen_sample.rs
scripts/: release.py
src/: analyze.rs  cargo_toml.rs  cli.rs  crate_fetch.rs  error.rs  flamegraph.rs  graph.rs  html_report.rs  lib.rs  main.rs  metrics.rs  platform.rs  registry.rs  report.rs  sample.rs  scanner.rs  usage.rs
src/css/: report.css
src/flamegraph/: layout.rs  mod.rs  render.rs
src/html/: shell.html
src/html_report/: mod.rs  style.rs  targets.rs
src/js/: content.js  features.js  flamegraph.js  report.js
tests/: integration_test.rs  js_test.rs  sample_freshness_test.rs  scanner_test.rs
tests/fixtures/: sample_report.json
tests/fixtures/test-workspace/crate-a/: Cargo.toml
tests/fixtures/test-workspace/crate-a/src/: lib.rs
tests/fixtures/test-workspace/crate-b/: Cargo.toml
tests/fixtures/test-workspace/crate-b/src/: lib.rs
tests/js/: run_tests.js  test_content.js  test_features.js  test_flamegraph.js
