[package]
name = "cargo-upstream-triage"
version = "0.1.0"
edition = "2021"
description = "Find high-ROI upstream dependency reduction opportunities"
license = "GPL-3.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
comfy-table = "7"
colored = "2"
anyhow = "1"
semver = "1"
rayon = "1"
home = "0.5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
