[package]
name = "cargo-depflame"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Visualize your Cargo dependency tree as a flamegraph and find optimization opportunities"
license = "MIT"
repository = "https://github.com/sinelaw/cargo-depflame"
keywords = ["cargo", "dependencies", "flamegraph", "optimization"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
comfy-table = "7"
colored = "2"
anyhow = "1"
semver = "1"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
tempfile = "3"
ureq = "2"
flate2 = "1"
tar = "0.4"
