[package]
name = "cargo-depflame"
version = "0.1.1"
edition = "2021"
rust-version = "1.88"
description = "Visualize your Cargo dependency tree as a flamegraph and find optimization opportunities"
license = "MIT"
repository = "https://github.com/sinelaw/cargo-depflame"
keywords = ["cargo", "dependencies", "flamegraph", "optimization"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
rayon = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
open = "5"
ureq = { version = "2", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[features]
remote = ["ureq", "flate2", "tar"]

[dev-dependencies]
tempfile = "3"
